# self-manager

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
includes/custom/config/: config.h
includes/custom/tabheader/: tabheader.cpp  tabheader.h
includes/custom/tabmanager/: tabmanager.cpp  tabmanager.h
includes/custom/tabwidget/: tabwidget.cpp  tabwidget.h
includes/custom/widget/: widget.cpp  widget.h
includes/tabgenerator/: tabgenerator.cpp  tabgenerator.h
